--- a/src/Project.Web.Host/src/app/layout/header-user-menu.component.html
+++ b/src/Project.Web.Host/src/app/layout/header-user-menu.component.html
@@ -131,9 +131,9 @@
     </button>
 
     <div class="dropdown-menu dropdown-menu-right mt-3" *dropdownMenu role="menu">
-      <a class="dropdown-item c-pointer">Acount</a>
+      <a class="dropdown-item c-pointer">{{Account | localize}}</a>
       <li class="divider dropdown-divider"></li>
-      <a class="dropdown-item c-pointer" (click)="logout()">Sign out</a>
+      <a class="dropdown-item c-pointer" (click)="logout()">{{Logout |localize}}</a>
     </div>
   </div>
 
