--- a/src/Project.Web.Host/src/app/widgets/two-lists-drag-and-drop/two_list_drag_and_drop.component.css
+++ b/src/Project.Web.Host/src/app/widgets/two-lists-drag-and-drop/two_list_drag_and_drop.component.css
@@ -1,4 +1,4 @@
-.example-container {
+.two-list-container {
     width: 400px;
     max-width: 100%;
     margin: 0 25px 25px 0;
@@ -7,60 +7,43 @@
   
   }
   
-  .example-list {
-    border: solid 1px #ccc;
+  .two-list-list {
     min-height: 60px;
-    background: white;
     border-radius: 0.75rem;
     overflow: hidden;
     display: block;
-    box-shadow: 0 1px 15px rgb(0 0 0 / 4%), 0 1px 6px rgb(0 0 0 / 4%);
     height: 100%;
     text-align: center;
     justify-content: center;
   }
   
-  .example-box {
-    padding: 5px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
+  .two-list-box {
     display: flex;
+    height: 30px;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     cursor: move;
-    background: white;
     font-size: 14px;
-    box-shadow: 0 1px 15px rgb(0 0 0 / 4%), 0 1px 6px rgb(0 0 0 / 4%);
   }
 
-  .example-btn {
-    padding: 5px 10px;
-    color: rgba(0, 0, 0, 0.87);
+  .two-list-btn {
+    /* padding: 5px 10px; */
+    border: 1px solid;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
     cursor:pointer;
-    background: white;
     font-size: 14px;
-    box-shadow: 0 1px 15px rgb(0 0 0 / 4%), 0 1px 6px rgb(0 0 0 / 4%);
     justify-content: center;
 
   }
-
-  .example-btn:hover{
-    background: rgb(223 219 219 / 36%);
-  }
-  
   .cdk-drag-preview {
     box-sizing: border-box;
     border-radius:0.75rem;
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-                0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                0 3px 14px 2px rgba(0, 0, 0, 0.12);
   }
   
   .cdk-drag-placeholder {
@@ -71,39 +54,29 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-box:last-child {
+  .two-list-box:last-child {
     border: none;
   }
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  .two-list-list.cdk-drop-list-dragging .two-list-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .left-Items{
+  .Items{
     height: 30vh;
     background-color: transparent;
-    overflow-y: scroll;
-    box-shadow: 0 1px 15px rgb(0 0 0 / 4%), 0 1px 6px rgb(0 0 0 / 4%);
     border-radius:0.75rem;
-
+    border: 1px solid;
+  }
+  .btn-margin-all{
+    margin: 10px;
   }
 
-  .left-Items-no-Scroll{
+  .Items-no-Scroll{
     height: 30vh;
     background-color: transparent;
-    box-shadow: 0 1px 15px rgb(0 0 0 / 4%), 0 1px 6px rgb(0 0 0 / 4%);
     border-radius:0.75rem;
   }
-
-  .layout-item-drag-preview {
-    background: red;
-    color: white;
-    font-weight: bold;
-    padding: 0.25em 0.5em 0.2em;
-    border-radius: 30px;
-    display: inline-block;
-  }
-
   .glyph-icon{
     
     font-size: 1.5rem;
@@ -113,6 +86,16 @@
   .selected-and-dragged{
     visibility: hidden;
   }
+
+  perfect-scrollbar>.ps .two-list-widget-scroll {
+    max-width: unset;
+    width: unset;
+    margin-right: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    padding-left: 0px;
+  }
+  
 
   .simple-icon-plus
   {
