update two lists drag and drop

--- a/src/Project.Web.Host/src/app/widgets/two-lists-drag-and-drop/two_list_drag_and_drop.component.html
+++ b/src/Project.Web.Host/src/app/widgets/two-lists-drag-and-drop/two_list_drag_and_drop.component.html
@@ -1,19 +1,13 @@
-<div class="container">
+<div class="container drag-and-drop-container">
   <div cdkDropListGroup>
     <div class="two-list-container">
       <h2>{{"Avaliable"|localize}}</h2>
       <div class="Items">
-        <div cdkDropList [cdkDropListData]="avaliableList" class="two-list-list rounded"
-          (cdkDropListDropped)="drop($event)">
+        <div cdkDropList [cdkDropListData]="avaliableList" class="two-list rounded" (cdkDropListDropped)="drop($event)">
           <perfect-scrollbar>
-            <div class="two-list-box custom-control" *ngFor="let item of avaliableList" id="{{item.id}}AV"
-              (click)="selectedItem = item;setSelectedItem(item)" (cdkDragStarted)="DragPreviewAvaliable(item)"
+            <div class="two-list-box custom-control" *ngFor="let item of avaliableList" id="{{item.name}}AV"
+              (click)="selectedItem = item;setSelectedItem(true,item)" (cdkDragStarted)="DragPreviewAvaliable(item)"
               (cdkDragEnded)="DragEnded()" cdkDrag>{{item.name}}
-              <div class="itemCheck mb-0 custom-checkbox custom-control">
-                <input type="checkbox" class="custom-control-input" id="customCheck0" [checked]="isSelected(item)">
-                <label class="custom-control-label" for="customCheck0">
-                </label>
-              </div>
             </div>
           </perfect-scrollbar>
         </div>
@@ -23,107 +17,75 @@
       <br>
       <br>
       <div class="Items-no-Scroll">
-        <div class="two-list-list rounded ">
-          <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveSelectedBackward()"><span
-              class="iconsminds-arrow-left"></span></div>
-          <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveAllBackward()"><span
-              class="iconsminds-arrow-left-2"></span>
-          </div>
-          <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveAllForward()"><span
-              class="iconsminds-arrow-right-2"></span>
-          </div>
-          <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveSelectedForward()"><span
-              class="iconsminds-arrow-right"></span></div>
+        <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveSelectedBackward()"><span
+            class="iconsminds-arrow-left"></span></div>
+        <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveAllBackward()"><span
+            class="iconsminds-arrow-left-2"></span>
         </div>
+        <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveAllForward()"><span
+            class="iconsminds-arrow-right-2"></span>
+        </div>
+        <div class="btn btn-primary btn-sm btn-margin-all" (click)="MoveSelectedForward()"><span
+            class="iconsminds-arrow-right"></span></div>
       </div>
     </div>
     <div class="two-list-container">
       <h2>{{ "Selected" | localize}}</h2>
       <div class="Items">
-        <div cdkDropList [cdkDropListData]="selectedList" class="two-list-list rounded"
-          (cdkDropListDropped)="drop($event)">
+        <div cdkDropList [cdkDropListData]="selectedList" class="two-list rounded" (cdkDropListDropped)="drop($event)">
           <perfect-scrollbar>
-            <div class="two-list-box custom-control row" *ngFor="let item of selectedList" id="{{item.id}}SEL"
-              (click)="selectedItem = item;setSelectedItem(item)" (cdkDragStarted)="DragPreviewSelected(item)"
+            <div class="two-list-box custom-control row" *ngFor="let item of selectedList" id="{{item.name}}SEL"
+              (click)="selectedItem = item;setSelectedItem(false,item)" (cdkDragStarted)="DragPreviewSelected(item)"
               (cdkDragEnded)="DragEnded()" cdkDrag>
-              <div class="two-list-box custom-control col-6">{{item.name}}</div>
-              <div class=" col-6">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-3 simple-icon-plus " id="{{item.id}}INS"></div>
-                    <div class="col-3 simple-icon-pencil " id="{{item.id}}EDI"></div>
-                    <div class="col-3 simple-icon-trash " id="{{item.id}}DEL"></div>
-                    <div class="itemCheck mb-0 custom-checkbox custom-control col-3">
-                      <input type="checkbox" class="custom-control-input" id="customCheck0"
-                        [checked]="isSelected(item)">
-                      <label class="custom-control-label" for="customCheck0">
-                      </label>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
+              <div class="custom-control col-6">{{item.name}}</div>
+                <div class="col-1 simple-icon-plus " id="{{item.name}}INS"></div>
+                <div class="col-1 simple-icon-pencil " id="{{item.name}}EDI"></div>
+                <div class="col-1 simple-icon-trash " id="{{item.name}}DEL"></div>
             </div>
           </perfect-scrollbar>
         </div>
       </div>
     </div>
-
-
-
   </div>
-
-
-
-
 </div>
 
-<div class="col-4">
-  <div class="two-list-container">
-    <br>
-    <br>
-    <div class="Items-no-Scroll">
-      <div class="two-list-list rounded ">
-        <div class="col-12">
-          <div class="row">
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="setInsertable()">{{"Insertable"
-              |localize}}</div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="setAllInsertable()">{{"All Insertable"
-              |localize}}</div>
-          </div>
-          <div class="row">
-
-            <div class="btn btn-primary btn-margin-all btn-sm col-5" (click)="setEditable()">{{"Editable" |localize}}
-            </div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5" (click)="setAllEditable()">{{"All Editable"
-              |localize}}</div>
-          </div>
-          <div class="row">
-
-            <div class="btn btn-primary btn-margin-all btn-sm col-5" (click)="setDeleteable()">{{"Deleteable"
-              |localize}}</div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5" (click)="setAllDeleteable()">{{"All Deleteable"
-              |localize}}</div>
-          </div>
-          <div class="row">
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeInsertable()">{{"Not Insertable"
-              |localize}}</div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeAllInsertable()">{{"All Not Insertable" |localize}}</div>
-          </div>
-          <div class="row">
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeEditable()">{{"Not Editable"
-              |localize}}</div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeAllEditable()">{{"All Not Editable"
-              |localize}}</div>
-          </div>
-          <div class="row">
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeDeleteable()">{{"Not Deleteable"
-              |localize}}</div>
-            <div class="btn btn-primary btn-margin-all btn-sm col-5 " (click)="removeAllDeleteable()">{{"All Not Deleteable" |localize}}</div>
-          </div>
-        </div>
-
-      </div>
+<div class="drag-and-drop-buttons-container">
+  <div class="Items-no-Scroll">
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button" (click)="setInsertable()"> {{"Insertable"
+        |localize}}</div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="setAllInsertable()">{{"All
+        Insertable" |localize}}</div>
+    </div>
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button" (click)="setEditable()">{{"Editable"
+        |localize}} </div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button" (click)="setAllEditable()">{{"All
+        Editable" |localize}}</div>
+    </div>
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button" (click)="setDeleteable()"> {{"Deleteable"
+        |localize}}</div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button" (click)="setAllDeleteable()">{{"All
+        Deleteable" |localize}}</div>
+    </div>
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeInsertable()">{{"Not
+        Insertable" |localize}}</div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeAllInsertable()"> {{"All
+        Not Insertable" |localize}}</div>
+    </div>
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeEditable()">{{"Not
+        Editable" |localize}}</div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeAllEditable()">{{"All Not
+        Editable" |localize}}</div>
+    </div>
+    <div class="buttons-group">
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeDeleteable()">{{"Not
+        Deleteable" |localize}}</div>
+      <div class="btn btn-primary btn-margin-all btn-sm drag-and-drop-button " (click)="removeAllDeleteable()"> {{"All
+        Not Deleteable" |localize}}</div>
     </div>
   </div>
 </div>
