--- a/src/Project.Web.Host/src/assets/css/sass/_vien.style.scss
+++ b/src/Project.Web.Host/src/assets/css/sass/_vien.style.scss
@@ -47,6 +47,8 @@ Table of Contents
 42.Rounded
 43.Rtl
 44.Landing Page
+/////Souccar/////
+45.Two Lists Drag and Drop
 */
 
 /* 00.Variables and Imports */
@@ -10776,5 +10778,169 @@ footer.page-footer {
   .mobile-menu-cta {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+}
+
+///////Souccar////////
+  
+.two-list {
+  min-height: 60px;
+  border-radius: 0.75rem;
+  overflow: hidden;
+  display: block;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+}
+
+.two-list-box {
+  display: flex;
+  min-height: 35px;
+  flex-direction: row;
+  border-bottom: 1px solid;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor: move;
+  font-size: 14px;
+}
+
+.two-list-box.selected{
+  background-image: radial-gradient(circle, $lp-bg-color-4 0%, $foreground-color 100%);
+
+}
+
+.two-list-btn {
+  border: 1px solid;
+  display: flex;
+  flex-direction: row;
+  
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  cursor:pointer;
+  font-size: 14px;
+  justify-content: center;
+
+}
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius:0.75rem;
+
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
+}
+
+.two-list-box:last-child {
+  border: none;
+
+}
+
+.two-list.cdk-drop-list-dragging .two-list-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
+}
+
+.Items{
+  height: 30vh;
+  background-color: transparent;
+  border-radius:0.75rem;
+  border: 1px solid;
+}
+.btn-margin-all{
+  margin: 5px;
+}
+
+.Items-no-Scroll{
+  background-color: transparent;
+  border-radius:0.75rem;
+}
+.glyph-icon{
+  
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+.selected-and-dragged{
+  visibility: hidden;
+}
+
+perfect-scrollbar>.ps .two-list-widget-scroll {
+  max-width: unset;
+  width: unset;
+  margin-right: 0px;
+  padding-right: 0px;
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+
+.simple-icon-plus
+{
+  color:transparent;
+}
+.simple-icon-pencil
+{
+  color:transparent;
+}
+.simple-icon-trash
+{
+  color:transparent;
+}
+
+.is-insertable{
+  color:blue;
+}
+.is-editable{
+   color: rgb(1, 78, 1);
+}
+.is-deleteable{
+  color: rgb(117, 2, 2);
+}
+
+.btn {
+  cursor: pointer;
+}
+
+.two-list-container {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.two-list-container-buttons {
+  max-width: 100%;
+  vertical-align: top;
+}
+
+.drag-and-drop-buttons-container{
+}
+
+.drag-and-drop-button{
+
+}
+
+.buttons-group{
+
+}
+@media (min-width: 1px) {
+  .two-list-container-buttons {
+    width: 10%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+  }
+
+  .two-list-container{
+    width: 39%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+
   }
 }
