--- a/src/Project.Web.Host/src/app/personnel/root-entities/employee/employee.component.html
+++ b/src/Project.Web.Host/src/app/personnel/root-entities/employee/employee.component.html
@@ -1,9 +1,9 @@
 <app-list-page-header [title]="title" [itemOrder]="itemOrder" [itemOptionsOrders]="itemOptionsOrders"
     [displayMode]="displayMode" [itemOptionsPerPage]="[5,10,20]" [itemsPerPage]="itemsPerPage"
     [selectAllState]="selectAllState" (changeDisplayMode)="changeDisplayMode($event)" (addNewItem)="showAddNewModal()"
-    (deleteItem)="deleteItem()" [selectedCount]="selectedCount"
-    (selectAllChange)="selectAllChange($event)" (itemsPerPageChange)="itemsPerPageChange($event)"
-    (changeOrderBy)="changeOrderBy($event)" (searchKeyUp)="searchKeyUp($event)">
+    (deleteItem)="deleteItem()" [selectedCount]="selectedCount" (selectAllChange)="selectAllChange($event)"
+    (itemsPerPageChange)="itemsPerPageChange($event)" (changeOrderBy)="changeOrderBy($event)"
+    (searchKeyUp)="searchKeyUp($event)">
 </app-list-page-header>
 <context-menu #basicMenu>
     <ng-template contextMenuItem let-item (execute)="onContextMenuClick('edit',$event.item)">
@@ -33,3 +33,15 @@
         </div>
     </div>
 </div>
+<div class="col-12">
+    <pagination [totalItems]="totalItem" [itemsPerPage]="itemsPerPage" [rotate]="true" [maxSize]="5"
+        [(ngModel)]="currentPage" (pageChanged)="pageChanged($event)" class="justify-content-center"
+        [customNextTemplate]="nextTemplate" [customPreviousTemplate]="prevTemplate">
+    </pagination>
+</div>
+<ng-template #nextTemplate let-disabled="disabled" let-currentPage="currentPage">
+    <i class='simple-icon-arrow-right'></i>
+</ng-template>
+<ng-template #prevTemplate let-disabled="disabled" let-currentPage="currentPage">
+    <i class='simple-icon-arrow-left'></i>
+</ng-template>
